--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Kien's Web</title>
-    <script src="index.js"></script>
+<meta charset="UTF-8">
+<script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+<title>Lon Hosford Basic Animation in Create JS</title>
+<script>
+        var stage, sunShape;
+		function init() 
+		{
+            stage = new createjs.Stage("stage-canvas");
+            sunShape = new createjs.Shape();
+            sunShape.graphics.beginFill("#F00");
+            sunShape.graphics.drawCircle(0,0,25);
+            sunShape.graphics.endFill();
+            stage.addChild(sunShape);
+            stage.update();
+		}
+</script>
+
+<style>
+	body {
+		margin: 0 ;
+		padding: 15px;
+		background-color: #ccc;
+	}
+	canvas {
+		border: solid 2px #000;
+		background-color: #fff;
+		display: block;
+		margin: 0px auto 0px auto;
+		padding-left: 0;
+		padding-right: 0;
+	}
+</style>
 </head>
-<body>
-    
+<body onLoad="init();">
+<canvas id="stage-canvas" width="550" height="400">
+	This web browser does not support canvas.
+</canvas>
 </body>
 </html>
